--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
+title: Yuejia Zhang
+photo: /assets/img/photo.jpg
+photo_description: Zürich, Switzerland, Jan 2024.
+description: Yuejia Zhang's Personal Webpage
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
