--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: Yuejia Zhang
 photo: /assets/img/photo.jpg
 photo_description: Zürich, Switzerland, Jan 2024.
 description: Yuejia Zhang's Personal Webpage
+contact_information: mailto:yuejiazhang21@m.fudan.edu.cn
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
