--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ photo: /assets/img/photo.jpg
 photo_description: Zürich, Switzerland, Jan 2024.
 description: Yuejia Zhang's Personal Webpage
 contact_information: mailto:yuejiazhang21@m.fudan.edu.cn
+research: ./research.html
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
